# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.323.2.17 2007-01-30 15:15:57 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

2.1.6 (????/??/??)
 - (2007/01/30) fixed oracle driver for xml alter table actions
 - (2007/01/30) improved _CryptedWithKey() - private key detection of
    Kernel/System/Crypt/PGP.pm if more keys are used for crypted messages
 - (2007/01/26) fixed ArticleFreeText output in CustomerTicketZoom mask
 - (2007/01/26) fixed bug in agent- and customer-ticket print feature

2.1.5 (2007/01/25)
 - (2007/01/25) fixed ignored ticket responible in phone ticket
 - (2007/01/18) fixed DestinationTime() if calendar feature is used
 - (2007/01/17) fixed not working freetime fields
 - (2007/01/11) fixed not working time selection if time zone feature is used
 - (2007/01/08) fixed not working email notification tags in auto response,
    agent and customer email notifications
 - (2007/01/08) fixed case sensitive of customer user login and agent user
    login in Kernel/System/User.pm and Kernel/System/CustomerUser/DB.pm if
    oracle or postgresql is used
 - (2007/01/08) fixed quoting in user selection if + is used in UserLogin in
    Kernel/Output/HTML/Standard/AdminCustomerUserForm.dtl
 - (2006/12/17) fixed bug #1532 - utf8 charsetproblems in stats
 - (2006/12/15) fixed bug #1446 - No "(Ticket unlock!)" link in
    AgentTicketCompose
 - (2006/12/14) fixed customer ldap auth if system is iso-8859 and ldap server
    is running in utf-8
 - (2006/12/14) fixed not working Kernel/System/DB/db2.pm (syntax error)

2.1.4 (2006/12/13)
 - (2006/12/13) fixed not working free time selection in AgentTicketClose,
    AgentTicketNote, AgentTicketOwner, AgentTicketPending, AgentTicketPriority
    and AgentTicketResponsible