@@ -1029,7 +1029,7 @@ DROP TABLE ticket_watcher CASCADE CONSTRAINTS;
 -- ----------------------------------------------------------
 CREATE TABLE ticket_watcher (
     ticket_id NUMBER (20, 0) NOT NULL,
-    user_id NUMBER (20, 0) NOT NULL,
+    user_id NUMBER NOT NULL,
     create_time DATE NOT NULL,
     create_by NUMBER NOT NULL,
     change_time DATE NOT NULL,
